--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Khalunin Pavel",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.26.7",
     "colors": "^1.4.0",
@@ -25,10 +28,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-if": "^3.0.0",
     "gulp-load-plugins": "^2.0.1",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
+    "gulp-npm-dist": "^1.0.3",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
+    "gulp-responsive": "^3.0.1",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.1.0",
@@ -36,11 +43,9 @@
     "gulp-svgmin": "^2.2.0",
     "gulp-tabify": "0.0.2",
     "gulp-uglify": "^3.0.2",
-    "@babel/core": "^7.7.7",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "gulp-npm-dist": "^1.0.3",
-    "gulp-newer": "^1.4.0",
-    "gulp-responsive": "^3.0.1"
+    "postcss-cssnext": "^3.1.0",
+    "postcss-short": "^5.0.0",
+    "postcss-short-color": "^4.0.0"
   },
   "optionalDependencies": {},
   "dependencies": {
